= 0.9.3 = * Add a documentation of "Theme Options" in readme.txt * Fix: In gallery image post format with caption, the thumbnail image overlaps its white-wrapper. * Remove overflow:hidden for #sidebar * Fix: Image with larger dimension in widget * Fix: All text of sub menu navigation with longer text must fully readable * Fix: Do not show all the social media icons by default when the fields in theme options are blank.

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name:zBorder
 Theme URI:http://zww.me/wordpress-theme-zborder.z-turn
 Description:It is a simple WordPress theme without any plugin needed, little images, custom-menu, widgets, threaded-comments. For WordPress version 3.7+
-Version:0.9.2
+Version:0.9.3
 Author:zwwooooo
 Author URI:http://zww.me/
 Tags:custom-menu, threaded-comments, two-columns, fixed-layout, right-sidebar, theme-options, responsive-layout
@@ -188,16 +188,19 @@ hr{
 	box-shadow:0 3px 3px rgba(0,0,0,0.1);
 }
 #navi ul ul li{
+	float:none;
 }
 #navi ul ul li a{
-	width:160px;
+	clear:both;
+	min-width:180px;
 	height:30px;
-	line-height:30px;
+	line-height:20px;
 	margin-right:0;
-	padding:0 10px;
+	padding:5px 10px;
 	background:#e2e1e0;
 	color:#000;
 	text-shadow:none;
+	white-space:nowrap;
 }
 #navi ul ul li:hover > a{
 	background:#d9d8d7;
@@ -666,9 +669,6 @@ hr{
 .entry img{
 	max-width:98%;
 	height:auto;
-	border:1px solid #bfbebe;
-	padding:1px;
-	background-color:#f9f9f9;
 }
 .entry img.wp-smiley{
 	border:none;
@@ -805,7 +805,6 @@ hr{
 /* #sidebar -------- */
 #sidebar{
 	position:relative;
-	overflow:hidden;
 	float:right;
 	width:300px;
 	padding:10px 0;
@@ -843,6 +842,10 @@ hr{
 }
 #sidebar .widget div{
 	padding:10px 0;
+}
+#sidebar .widget img{
+	max-width:100%;
+	height:auto;
 }
 #sidebar .widget div.clear{
 	margin:0;
@@ -1238,21 +1241,21 @@ a.back_to_top:hover{
 	text-align:center;
 	margin-top:10px;
 	margin-bottom:10px;
-	padding:4px;
-	border-radius:3px;
-	background:#fff;
-	border:1px solid #ddd;
 }
 .wp-caption img{
 	margin:0;
 	padding:0;
 	background:none;
 }
+.entry .wp-caption img{
+	max-width:100%;
+}
 .wp-caption p.wp-caption-text{
 	font-size:12px;
 	line-height:20px;
-	padding:4px 0 0;
-	margin:0;
+	padding:0 5px;
+	color:#666;
+	text-shadow:1px 1px 0 #fff;
 }
 /* calendar START */
 .widget_calendar h3{
